feat: current user
